--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="box bb-0 br-0"><span class="boxtext "></span></div>
         </div>
         <div class="game-info">
-            <div>
+            <div class="details">
                 <span class="info"></span> <br>
                 <button id="reset" class="btn btn-outline-success">Reset</button>
             </div>
