--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         </div>
         <div class="game-info">
             <div class="details">
+                <span class="info"></span> <br>
                 <button id="reset" class="btn btn-outline-success">Reset</button>
-                
             </div>
             <div class="imgbox">
                 <img src="../gif/adorable-litte-rabbit-cute.gif" alt="">
