--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <button id="reset" class="btn btn-outline-success">Reset</button>
             </div>
             <div class="imgbox">
-                <img src="../gif/adorable-litte-rabbit-cute.gif" alt="">
+                <img src="gif/adorable-litte-rabbit-cute.gif" alt="">
                 <!-- <img src="/gif/excited.gif" alt=""> -->
             </div>
         </div>
