--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="game-info">
             <div class="details">
-                <span class="info"></span> <br>
+                <span class="info"></span>
                 <button id="reset" class="btn btn-outline-success">Reset</button>
             </div>
             <div class="imgbox">
